# AGITracer

./: .gitignore  AGITracer.sln  CMakeLists.txt
AGITracer/: AGITracer.vcxproj  AGITracer.vcxproj.filters  image.h  main.cpp  vec3.h
src/: image.hpp  main.cpp  tigr.c  tigr.h  vec.hpp
